--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -12,7 +12,16 @@
 
     <artifactId>demo</artifactId>
     <dependencies>
-        <!-- something should be here-->
+        <dependency>
+            <groupId>com.epam</groupId> <artifactId>utils</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.17.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
