--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,11 @@
     </properties>
     <dependencyManagement>
         <dependencies>
+            <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-params</artifactId>
-                <version>${junit.version}</version>
+                <version>5.12.0</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
